# psma

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/psma_api/: deps.py  export_openapi.py  logging_config.py  logging_context.py  main.py  service_registry.py  settings.py
apps/api/psma_api/engines/: availability_engine_impl.py  availability_v1.py  planner_engine_impl.py  planner_v1.py
apps/api/psma_api/models/: availability.py  planning.py  providers.py
apps/api/psma_api/ports/: availability_engine.py  planner_engine.py
apps/api/psma_api/routes/: availability_engine_v1.py  availability_v1.py  planning_v1.py  providers_tmdb.py  providers_tvmaze.py
apps/api/tests/: test_availability_engine_v1.py  test_availability_v1_facade.py  test_health.py  test_planning_v1.py  test_providers_tmdb.py  test_providers_tvmaze.py
apps/web/: README.md  package.json
contracts/: README.md
contracts/openapi/: psma.openapi.json
contracts/registry/: service-registry.v1.json
docs/: README.md
docs/business/: PSMA-Business-Plan.md  PSMA-Data-Sources-and-Trust.md  PSMA-FAQ.md  PSMA-How-AI-Helps.md  PSMA-MVP-Examples.md  PSMA-One-Pager.md  PSMA-Pitch-Deck-Outline.md  PSMA-Privacy-and-Security-Summary.md  PSMA-Stack-Summary.md  README.md
docs/technical/: 00-Architecture-Overview.md  01-Domain-Model.md  02-Ports-and-Adapters.md  03-AI-Agent-System.md  04-Data-Flow-and-Events.md  05-Security-and-Identity.md  10-User-Stories.md  11-MVP-PRD.md  (+16 more)
scripts/: check-node.mjs  dev.sh
(+8 files in other folders)
